V0.0.5 (2016-09-??):
====================

* New features:
  * Added helper class for parser matching process debugging.
  * Added minimal model for parsing Tomcat start/stop syslog messages.
* Bugfixes:
  * Fixed file descriptor leak in PersistencyUtil.py on store

V0.0.4 (2016-08-26):
====================

* New features:
  * NewMatchPathValueComboDetector: Detect new combination of
    values for list of data pathes, e.g. for link analysis.
  * ParsedAtomFilterMatchAction: Forward data to specific handlers
    when rules match.
  * VolatileLogarithmicBackoffEventHistory: Added unique EventId
  * Pass event source reference to event handlers to allow query/change
    of source parameters when handling the event.
  * Generic logdata parsing model improvements
  * Added new rule types: ValueDependentDelegatedMatchRule and
    ValueDependentModuloTimeMatchRule
* Bugfixes:
  * Packaging: unowned directory after purge, see
    https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=832347
  * DefaultMailNotificationEventHandler: cleanup of old sendmail
    process instances not working
  * EventGenerationMatchAction: wrong method name, class field access


V0.0.3 (2016-07-21):
====================

* Backport of changes from Debian ITP process review, see
  https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=813096
* Handle rollover from one logfile to the next more graceful.
* New features:
  * Added support for multiple parallel timescales in component
    trigger timing, e.g. real-time and forensic-time.
  * Added MissingMatchPathValueDetector to detect when data values
    were not reported for an extended period of time.
  * Added VolatileLogarithmicBackoffEventHistory to keep data
    of limited number of events in memory for automated processing.
  * AMinerRemoteControl: Added "--ExecFile" parameter to execute
    commands from file, "--StringResponse" for direct output.
* Bugfixes:
  * debian/postinst: disable service start when not already enabled