@@ -23,7 +23,24 @@ class EventHandlerInterface:
     @param eventData type-specific event data object, should not
     be used unless listener really knows about the eventType.
     @param eventSource reference to detector generating the event"""
-    raise Exception('Not implemented')
+    raise Exception('Interface method called')
+
+
+class EventSourceInterface:
+  """This is the common interface of all event sources. Component
+  not implementing this interface may still emit events without
+  support for callbacks."""
+
+  def whitelistEvent(self, eventType, sortedLogLines, eventData,
+      whitelistingData):
+    """Whitelist an event generated by this source using the information
+    emitted when generating the event.
+    @return a message with information about whitelisting
+    @throws NotImplementedError if this source does not support
+    whitelisting per se
+    @throws Exception when whitelisting of this special event
+    using given whitelistingData was not possible."""
+    raise Exception('Interface method called')
 
 
 # Add also the namespace references to classes defined in this
