@@ -3,6 +3,8 @@ V0.0.5 (2016-09-??):
 
 * New features:
   * Added helper class for parser matching process debugging.
+  * Added interface to ease detector state updates after triggering
+    an event.
   * Added minimal model for parsing Tomcat start/stop syslog messages.
 * Bugfixes:
   * Fixed file descriptor leak in PersistencyUtil.py on store
